solving the testcontainers errors